[package]
name = "modui"
version = "0.1.0"
edition = "2021"
description = "A wrapper around winit to allow modular ui's"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29.13"
thiserror = "1.0.50"
